<resources>
    <string name="app_name">Sprueche App</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="home">Home</string>
    <string name="fav_sayings">Favoriten</string>
    <string name="user_sayings">Eigene Sprüche</string>
    <string name="settings">Einstellungen</string>
    <string name="about">Impressum</string>
    <string name="uni_regensburg">Universität Regensburg</string>
    <string name="ss_16">Sommersemester 2016</string>
    <string name="topic">Mobile Apps für Android</string>
    <string name="sayings">Sprüche</string>
    <string name="random">Zufällig</string>
    <string name="all">Alle</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="own_sayings">Eigene Sprüche</string>
    <string name="font_path">fonts/custom_font.ttf</string>

</resources>
