<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">

        <item android:title="@string/sayings">
            <menu>
                <item
                    android:id="@+id/nav_home"
                    android:icon="@drawable/ic_home_grey600_48dp"
                    android:title="@string/home" />
                <item
                    android:id="@+id/nav_fav_sayings"
                    android:icon="@drawable/ic_star_grey600_48dp"
                    android:title="@string/fav_sayings" />
                <item
                    android:id="@+id/nav_user_sayings"
                    android:icon="@drawable/ic_human_handsdown_grey600_48dp"
                    android:title="@string/user_sayings" />
            </menu>
        </item>
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/ic_settings_grey600_48dp"
                    android:title="@string/settings" />

                <item
                    android:id="@+id/nav_about"
                    android:icon="@drawable/ic_information_variant_grey600_48dp"
                    android:title="@string/about" />
    </group>

    <!--<item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="Share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="Send" />
        </menu>
    </item>-->

</menu>
